--- a/android/app/src/main/res/drawable-v21/app_widget_background.xml
+++ b/android/app/src/main/res/drawable-v21/app_widget_background.xml
@@ -1,10 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-Background for widgets to make the rounded corners based on the
-appWidgetRadius attribute value
--->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <corners android:radius="?attr/appWidgetRadius" />
-    <solid android:color="?android:attr/colorBackground" />
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="1dp"
+        android:color="#ffffff" />
+    <gradient
+        android:angle="225"
+        android:endColor="#00FFFFFF"
+        android:startColor="#00000000" />
+    <corners
+        android:topRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:bottomLeftRadius="10dp" />
 </shape>
