--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:text="@string/time"
-                android:textColor="#1B1A1A"
+                android:textColor="#ffffff"
                 android:textSize="15dp" />
             <ImageButton
                 android:id="@+id/imageButton"
