--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -49,6 +49,11 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/temperature"
         style="@style/widget_text"
@@ -57,7 +62,7 @@
         android:layout_marginLeft="20dp"
         android:text="@string/text_temperature"
         android:textColor="#0E0E0E"
-        android:textSize="50dp" />
+        android:textSize="25dp" />
 
     <TextView
         android:id="@+id/humidity"
