--- a/android/app/src/main/res/drawable-v21/app_widget_background.xml
+++ b/android/app/src/main/res/drawable-v21/app_widget_background.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#ffffff" />
+        android:color="#000000" />
     <gradient
         android:angle="225"
-        android:endColor="#00FFFFFF"
-        android:startColor="#00000000" />
+        android:endColor="#111419"
+        android:startColor="#608DBD" />
     <corners
         android:topRightRadius="10dp"
         android:topLeftRadius="10dp"
