--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_widget_background"
@@ -22,7 +23,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="175dp"
             android:text="@string/text_place"
-            android:textColor="#131313"
+            android:textColor="#F8F5F5"
             android:textSize="20dp" />
 
         <LinearLayout
@@ -31,13 +32,14 @@
             android:layout_marginTop="10dp"
             android:gravity="right"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/time_update"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="right"
                 android:text="@string/time"
-                android:textColor="#000000"
+                android:textColor="#F1EAEA"
                 android:textSize="15dp" />
 
         </LinearLayout>
@@ -49,10 +51,15 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView"
+    <TextView
+        android:id="@+id/conditontext"
+        style="@style/widget_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="@string/text_condition"
+        android:textColor="#F4F3F3"
+        android:textSize="25dp" />
 
     <TextView
         android:id="@+id/temperature"
@@ -61,8 +68,19 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="@string/text_temperature"
-        android:textColor="#0E0E0E"
-        android:textSize="25dp" />
+        android:textColor="#EFECEC"
+        android:textSize="30dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/humidity"
@@ -71,7 +89,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:text="@string/text_humidity"
-        android:textColor="#151414"
+        android:textColor="#F8F1F1"
         android:textSize="20dp" />
 
 </LinearLayout>
