--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:gravity="right"
+        android:gravity="center|right"
         android:orientation="horizontal">
 
         <TextView
@@ -20,8 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="175dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="160dp"
             android:text="@string/text_place"
             android:textColor="#F8F5F5"
             android:textSize="20dp" />
@@ -29,37 +29,55 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+
             android:gravity="right"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/time_update"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|right"
+                android:layout_marginRight="5dp"
                 android:text="@string/time"
                 android:textColor="#F1EAEA"
                 android:textSize="15dp" />
 
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_popup_sync" />
         </LinearLayout>
-
-
-
-
 
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/conditontext"
-        style="@style/widget_text"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:text="@string/text_condition"
-        android:textColor="#F4F3F3"
-        android:textSize="25dp" />
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+        <TextView
+            android:id="@+id/conditontext"
+            style="@style/widget_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="@string/text_condition"
+            android:textColor="#F4F3F3"
+            android:textSize="25dp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/temperature"
@@ -71,16 +89,6 @@
         android:textColor="#EFECEC"
         android:textSize="30dp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_rotate" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/humidity"
