--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,9 +19,8 @@
             android:id="@+id/place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="center|left"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="8dp"
             android:layout_marginRight="160dp"
             android:text="@string/text_place"
             android:textColor="#F8F5F5"
@@ -41,11 +41,11 @@
                 android:layout_marginRight="5dp"
                 android:text="@string/time"
                 android:textColor="#F1EAEA"
-                android:textSize="15dp" />
+                android:textSize="12dp" />
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
+                android:layout_width="21dp"
                 android:layout_height="wrap_content"
                 android:src="@android:drawable/ic_popup_sync" />
         </LinearLayout>
@@ -66,16 +66,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             app:srcCompat="@android:drawable/ic_menu_rotate" />
-
-        <TextView
-            android:id="@+id/conditontext"
-            style="@style/widget_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="@string/text_condition"
-            android:textColor="#F4F3F3"
-            android:textSize="25dp" />
 
     </LinearLayout>
 
