--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -67,6 +67,16 @@
             android:layout_marginLeft="20dp"
             app:srcCompat="@android:drawable/ic_menu_rotate" />
 
+        <TextView
+            android:id="@+id/condition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/text_humidity"
+            android:textColor="#F8F1F1"
+            android:textSize="20dp" />
+
     </LinearLayout>
 
     <TextView
