--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -89,15 +89,22 @@
         android:textColor="#EFECEC"
         android:textSize="30dp" />
 
-
-    <TextView
-        android:id="@+id/humidity"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:text="@string/text_humidity"
-        android:textColor="#F8F1F1"
-        android:textSize="20dp" />
+        android:gravity="center|right"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/humidity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="@string/text_humidity"
+            android:textColor="#F8F1F1"
+            android:textSize="20dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
