--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -9,7 +9,7 @@
     android:padding="@dimen/widget_margin">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center|right"
@@ -89,13 +89,6 @@
         android:textColor="#EFECEC"
         android:textSize="30dp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center|right"
-        android:orientation="horizontal">
-
         <TextView
             android:id="@+id/humidity"
             android:layout_width="wrap_content"
@@ -104,7 +97,5 @@
             android:text="@string/text_humidity"
             android:textColor="#F8F1F1"
             android:textSize="20dp" />
-
-    </LinearLayout>
 
 </LinearLayout>
