--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -19,7 +19,7 @@
             android:id="@+id/place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
+            android:layout_gravity="center|right|left"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="160dp"
             android:text="@string/text_place"
