--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -8,20 +8,20 @@
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center|right"
+        android:layout_marginTop="5dp"
+        android:gravity="fill_horizontal"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/place"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|right|left"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="160dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="0dp"
             android:text="@string/text_place"
             android:textColor="#F8F5F5"
             android:textSize="20dp" />
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            android:layout_marginRight="0dp"
             android:gravity="right"
             android:orientation="horizontal">
 
@@ -53,7 +54,6 @@
 
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -64,14 +64,14 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             app:srcCompat="@android:drawable/ic_menu_rotate" />
 
         <TextView
             android:id="@+id/condition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginTop="10dp"
             android:text="@string/text_humidity"
             android:textColor="#F8F1F1"
@@ -84,16 +84,16 @@
         style="@style/widget_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:text="@string/text_temperature"
         android:textColor="#EFECEC"
-        android:textSize="30dp" />
+        android:textSize="35dp" />
 
         <TextView
             android:id="@+id/humidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:text="@string/text_humidity"
             android:textColor="#F8F1F1"
             android:textSize="20dp" />
