--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_widget_background"
@@ -18,9 +18,9 @@
 
         <TextView
             android:id="@+id/place"
-            android:layout_width="220dp"
+            android:layout_width="235dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:text="@string/text_place"
             android:textColor="#F8F5F5"
@@ -55,47 +55,38 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="center|left"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/temperature"
+            style="@style/widget_text"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:gravity="center|left"
+            android:text="@string/text_temperature"
+            android:textColor="#EFECEC"
+            android:textSize="35dp" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginLeft="10dp"
             app:srcCompat="@android:drawable/ic_menu_rotate" />
-
-        <TextView
-            android:id="@+id/condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/text_humidity"
-            android:textColor="#F8F1F1"
-            android:textSize="20dp" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/temperature"
-        style="@style/widget_text"
+        android:id="@+id/humidity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="@string/text_temperature"
-        android:textColor="#EFECEC"
-        android:textSize="35dp" />
-
-        <TextView
-            android:id="@+id/humidity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="@string/text_humidity"
-            android:textColor="#F8F1F1"
-            android:textSize="20dp" />
+        android:layout_marginLeft="0dp"
+        android:text="@string/text_humidity"
+        android:textColor="#F8F1F1"
+        android:textSize="20dp" />
 
 </LinearLayout>
