--- a/android/app/src/main/res/layout/weather_widget2.xml
+++ b/android/app/src/main/res/layout/weather_widget2.xml
@@ -12,15 +12,15 @@
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:layout_marginTop="10dp"
+         android:layout_marginTop="0dp"
          android:gravity="center|fill_horizontal"
          android:orientation="horizontal">
 
          <TextView
              android:id="@+id/place"
-             android:layout_width="220dp"
+             android:layout_width="235dp"
              android:layout_height="wrap_content"
-             android:layout_marginLeft="10dp"
+             android:layout_marginLeft="0dp"
              android:layout_marginRight="0dp"
              android:text="@string/text_place"
              android:textColor="#F8F5F5"
@@ -59,7 +59,7 @@
         style="@style/widget_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="0dp"
         android:text="@string/text_temperature"
         android:textColor="#EFECEC"
         android:textSize="30dp" />
@@ -71,19 +71,20 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="35dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="0dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/temperature4"
+                android:id="@+id/day4"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:text="@string/text_temperature1"
+                android:gravity="center"
+                android:text="Sun"
                 android:textColor="#EFECEC"
                 android:textSize="20sp"
                 android:textStyle="normal" />
@@ -91,25 +92,38 @@
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="35dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+            <TextView
+                android:id="@+id/temperature4"
+                style="@style/widget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:gravity="center"
+                android:text="@string/text_temperature1"
+                android:textColor="#EFECEC"
+                android:textSize="17sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="35dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/temperature5"
+                android:id="@+id/day5"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:text="@string/text_temperature2"
+                android:gravity="center"
+                android:text="Mon"
                 android:textColor="#EFECEC"
                 android:textSize="20sp"
                 android:textStyle="normal" />
@@ -117,25 +131,37 @@
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="35dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />
+            <TextView
+                android:id="@+id/temperature5"
+                style="@style/widget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:gravity="center"
+                android:text="@string/text_temperature1"
+                android:textColor="#EFECEC"
+                android:textSize="17sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="35dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/temperature6"
+                android:id="@+id/day6"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:text="@string/text_temperature3"
+                android:gravity="center"
+                android:text="Tue"
                 android:textColor="#EFECEC"
                 android:textSize="20sp"
                 android:textStyle="normal" />
@@ -143,25 +169,37 @@
             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="35dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />
+            <TextView
+                android:id="@+id/temperature6"
+                style="@style/widget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:gravity="center"
+                android:text="@string/text_temperature1"
+                android:textColor="#EFECEC"
+                android:textSize="17sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="35dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/temperature7"
+                android:id="@+id/day7"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:text="@string/text_temperature4"
+                android:gravity="center"
+                android:text="Wed"
                 android:textColor="#EFECEC"
                 android:textSize="20sp"
                 android:textStyle="normal" />
@@ -169,25 +207,37 @@
             <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="35dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />
+            <TextView
+                android:id="@+id/temperature7"
+                style="@style/widget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:gravity="center"
+                android:text="@string/text_temperature1"
+                android:textColor="#EFECEC"
+                android:textSize="17sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="35dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/temperature8"
+                android:id="@+id/day8"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:text="@string/text_temperature5"
+                android:gravity="center"
+                android:text="Thu"
                 android:textColor="#EFECEC"
                 android:textSize="20sp"
                 android:textStyle="normal" />
@@ -195,25 +245,37 @@
             <ImageView
                 android:id="@+id/imageView8"
                 android:layout_width="35dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />
+            <TextView
+                android:id="@+id/temperature8"
+                style="@style/widget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:gravity="center"
+                android:text="@string/text_temperature1"
+                android:textColor="#EFECEC"
+                android:textSize="17sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="35dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/temperature9"
+                android:id="@+id/day9"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:text="@string/text_temperature6"
+                android:gravity="center"
+                android:text="Fri"
                 android:textColor="#EFECEC"
                 android:textSize="20sp"
                 android:textStyle="normal" />
@@ -221,9 +283,20 @@
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="35dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />
+            <TextView
+                android:id="@+id/temperature9"
+                style="@style/widget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:gravity="center"
+                android:text="@string/text_temperature1"
+                android:textColor="#EFECEC"
+                android:textSize="17sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
     </LinearLayout>
