--- a/android/app/src/main/res/layout/weather_widget.xml
+++ b/android/app/src/main/res/layout/weather_widget.xml
@@ -89,4 +89,13 @@
         android:textColor="#F8F1F1"
         android:textSize="20dp" />
 
+    <TextView
+        android:id="@+id/realfeel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:text="@string/text_realfeel"
+        android:textColor="#F8F1F1"
+        android:textSize="20dp" />
+
 </LinearLayout>
